fixed devices list on mobile view

--- a/src/components/CalculationSummary/CalculationSummary.scss
+++ b/src/components/CalculationSummary/CalculationSummary.scss
@@ -19,7 +19,7 @@
         width: 90%;
         flex-direction: column;
         align-items: center;
-        margin: 10px 25px 90px 25px;
+        margin: 10px 0 90px 0;
     }
 
     &__container {
