--- a/src/components/DeviceBar/DeviceBar.scss
+++ b/src/components/DeviceBar/DeviceBar.scss
@@ -15,7 +15,7 @@
   text-align: center;
 
   @include mobile {
-    padding:  0.5rem 2rem;
+    padding:  0.6rem 1.2rem;
     justify-content: space-between;
   }
 
@@ -29,6 +29,8 @@
 
     @include mobile {
       width: 40%;
+      font-size: 0.95rem;
+      margin: none;
     }
   }
 
@@ -108,8 +110,7 @@
   :any-link {
     text-decoration: none;
     color: rgba(115, 120, 134, 1);
-    width: 8%;
-    
+    // width: 8%;
 
     &:hover {
       cursor: pointer;
@@ -121,11 +122,17 @@
     border-radius: 13px;
     padding: 5px;
     width: 11%;
-    
 
+    h4 {  
+        @include mobile {
+            font-size: .9rem;
+        }
+    }
+    
     @include mobile {
-      margin-right: 1rem;
-      }
+      width: 30%;
+      padding: 8px;
+    }
 
     &--Low {
       color: $low-color;
